[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "northssl"
version = "0.1.0"
description = "Modular SSL/TLS automation for Linux and Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1",
  "rich>=13,<15",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "cryptography>=42,<46",
  "pydantic-settings>=2,<3",
  "psutil>=6,<8",
  "Jinja2>=3.1,<4",
  "APScheduler>=3.10,<4",
]

[project.scripts]
northssl = "northssl.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
